fixed overflow of event preview

--- a/public/modules/mainApp/center/center.scss
+++ b/public/modules/mainApp/center/center.scss
@@ -131,10 +131,13 @@
       background-color: white;
     }
   }
-
+  #infoBoxMainHolder {
+    overflow: hidden;
+  }
   #infoBox {
     display: flex;
     flex-direction: column;
+    height: 100%;
     .mainContent {
       margin-top: 10px;
       display: flex;
